--- a/views/join-saras-club.html
+++ b/views/join-saras-club.html
@@ -120,7 +120,7 @@
 	  </fieldset>
 	  <div class="row">
 		  <div class="col-xs-offset-3 col-xs-5 alert alert-info {{ kitgui.joinSarasClubChildrenInstructions.classNames }}">
-			  {{ kitgui.joinSarasClubChildrenInstructions.content }}
+			  {{ kitgui.joinSarasClubChildrenInstructions.content | safe }}
 		  </div>
 	  </div>
 	  <div class="row child">
