--- a/views/partials/productColor.html
+++ b/views/partials/productColor.html
@@ -1,5 +1,5 @@
 <div class="product-container">
-	<div class="product" data-productnumber="{{ colors[0].productNumber }}">
+	<div class="product" data-productnumber="{{ colors[0].productNumber }}" data-producturl="{{ colors[0].productURL }}">
 		<a href="{{ colors[0].productURL }}">
 			<span class="quick-view">QUICKVIEW</span>
 			<img src="{{ colors[0].images[0] }}">
