--- a/public/css/pages/catalog.css
+++ b/public/css/pages/catalog.css
@@ -1,179 +1,8 @@
-.middle .content {
-	background:#fff;
+h1 {
+	color:#999;
+	font-size:30px;
 }
-.left-column-catalog {
-	display:block;
-	position:relative;
-	float:left;
-	width:22%;
-	min-height:400px;
-	background-color:#fff;
-	overflow:hidden;
-	text-align:left;
-	vertical-align:top;
-}
-.departments {
-	border:1px solid #bcc0c0;
-	padding:10px 0 10px 15px;
-	display:block;
-}
-.departments span {
-	font-size:13px;
-	font-weight:400;
-	color:black;
-}
-.nav-list {
-	display:block;
-	text-align:left;
-	margin-top:40px;
-	padding:0;
-	margin-left:20px;
-}
-.nav-list li {
-	list-style:none;
-	display:block;
-	padding-bottom:10px;
-	margin:0;
-}
-.nav-list li a:hover {
-	color:#0098ce;
-}
-.nav-list li a {
-	display:block;
-	text-align:left;
-	font-size:15px;
-	font-weight:300;
-	color:black;	
-}
-.right-column-catalog {
-	position:relative;
-	display:block;
-	float:right;
-	width:75%;
-	min-height:400px;
-	background-color:#fff;
-	overflow:hidden;
-}
-.catalog-header {
-	padding:0;
-	font-size:24px;
-	border-bottom:1px solid #bcc0c0;
-	margin-bottom:45px;
-}
-.right-container {
-	position:relative;
-	min-height:150px;
-	background-color:#0098ce;
-	padding:30px 0 15px 40px;
-	margin-bottom:45px;
-}
-.right-banner {
-	position:absolute;
-	background-color:#b9b2b2;
-	width:210px;
-	height:200px;
-	top:-8px;
-	right:30px;
-}
-.right-container-title {
-	font-size:16px;
-	font-weight:400;
-	color:#fff;
-	padding-bottom:15px;
-}
-.right-container-border {
-	width:64px;
-	border-bottom:2px solid #fff;
-}
-.right-container-description {
-	padding-top:15px;
-	width:260px;
-	font-size:15px;
-}
-.sort-product-bar {
-	position:relative;
-	height:42px;
-	overflow:hidden;
-	background-color:#0098ce;
-}	
-.sort-product-bar select {
-	width: 68px;
-    font-size: 16px;
-    line-height: 1;
-    border: 1px solid #bcc0c0;
-    border-radius: 0;
-    height: 24px;
-    -webkit-appearance: none;
-	}
-.left-dropdown {
-	position:absolute;
-	left:270px;
-	top:9px;
-	display:inline-block;
-	margin:0;
-}
-.left-dropdown span {
-	display:inline-block;
-	font-size:15px;
-	color:#fff;
-	padding-right:10px;
-}
-.left-dropdown select {
-	padding-left:4px;
-	width:100px;
-}
-.right-dropdown {
-	position:absolute;
-	right:30px;
-	top:9px;
-	display:inline-block;
-	margin:0;
-}
-.right-dropdown span {
-	display:inline-block!important;
-	font-size:15px;
-	color:#fff;
-	padding-right:10px;
-}
-.right-dropdown select {
-	padding-left:2px;
-	width:50px;
-}
-.big-product-image {
-	position:relative;
-	display:block;
-	width:360px;
-	height:474px;
-	background-image:url(/img/girls-fuzzy-fleece.png);
-}
-.middle .featured-products {
-	font-size:0;
-	text-align:center;
-	vertical-align:top;
-}
-.middle .price {
-	display:block;
-	text-align:center;
-	color:#000;
-}
-.middle .price .msrp { 
-	display:none; 
-}
-.middle .price .unit-price { 
-	display:inline-block; 
-}
-.middle .price .discount .msrp { 
-	display:inline-block; 
-	text-decoration:line-through; 
-}
-.middle .price .discount .unit-price { 
-	color:#f00;
-	margin-left:10px; 
-}
-.product-image {
-	background-repeat:no-repeat;
-	background-position:center center;
-	background-size:contain;
-	width:200px;
-	height:300px;
+h2 {
+	font-size:20px;
+	color:#1A98CE;
 }
