--- a/views/cart.html
+++ b/views/cart.html
@@ -10,6 +10,22 @@
 {% endblock %}
 
 {% block foot %}
+	<div class="modal-cart modal fade" style="display:none">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+	        <h4 class="modal-title">&nbsp;</h4>
+	      </div>
+	      <div class="modal-body">
+	        <p class="alert alert-info"></p>
+	      </div>
+	      <div class="modal-footer">
+	        <button type="button" class="btn btn-primary" data-dismiss="modal">OK</button>
+	      </div>
+	    </div><!-- /.modal-content -->
+	  </div><!-- /.modal-dialog -->
+	</div><!-- /.modal -->
 	<script type="text/template" id="carttemplate">
 	{{ cartFile | safe }}
 	</script>
