--- a/views/catalog.html
+++ b/views/catalog.html
@@ -5,56 +5,82 @@
 {% endblock %}
 
 {% block content %}
-	<div class="left-column-catalog">
-		<a class="departments"><span>DEPARTMENTS</span></a>
-		<ul class="nav-list">
-			<li><a href="/pjs-for-girls">GIRLS</a></li>
-			<li><a href="/pjs-for-boys">BOYS</a></li>
-			<li><a href="/up-past-8"><img src="/img/up-past-8.png"></a></li>
-			<li><a href="/fuzzy-fleece">FUZZY FLEECE</a></li>
-			<li><a href="/sale">SALE</a></li>
-		</ul>
-	</div>
-	<div class="right-column-catalog">
-		<div class="catalog-header {{ kitgui.catalogheader.classNames }}">{{ kitgui.catalogheader.content }}</div>
-		<div class="right-container">
-			<div class="right-container-title {{ kitgui.boxtitle.classNames }}">{{ kitgui.boxtitle.content }}</div>
-			<div class="right-container-border"></div>
-			<div class="right-container-description {{ kitgui.boxdescription.classNames }}">
-				{{ kitgui.boxescription.content }}
-			</div>
-			<div class="right-banner {{ kitgui.boximage.classNames }}">
-				{{ kitgui.boximage.content }}
-			</div>
-		</div>
-		<div class="sort-product-bar">
-			<div class="left-dropdown">
-				<span class="sort-by">Sort by :</span>
-				<select class="sort-dropdown">
-			  	  	<option value="">Default</option>
-				  	<option value=""></option>
-				 	<option value=""></option>
-				  	<option value=""></option>
-				</select>
-			</div>
-			<div class="right-dropdown">
-				<span class="show">Show :</span>
-				<select class="show-dropdown">
-				  	<option value="">Search</option>
-				  	<option value=""></option>
-				  	<option value=""></option>
-				</select>
-			</div>
-		</div>
-		<div class="productColors">
-			{% for product in products %} 
-				{% include "./partials/product.html" with product only %}
+<div class="top-banner carousel slide {{ items[pageID + 'Slider'].classNames }}" id="slider" data-ride="carousel">
+	{% if items[pageID + 'Slider'].content %}
+		<div class="carousel-inner">
+			{% for item in items[pageID + 'Slider'].content %}
+				   {% if loop.first %}
+   				    <div class="item active">
+   				      <img src="{{ item.src }}" alt="{{ item.alt }}">
+   				      <div class="carousel-caption">{{ item.caption }}</div>
+   				    </div>
+				   {% else %}
+   				    <div class="item">
+   				      <img src="{{ item.src }}" alt="{{ item.alt }}">
+   				      <div class="carousel-caption">{{ item.caption }}</div>
+   				    </div>
+				   {% endif %}
 			{% endfor %}
 		</div>
+	{% endif %}
+</div>
+<div class="site-width content-area">
+	<h1 class="{{ items[pageID + 'H1'].classNames }}">{{ items[pageID + 'H1'].content }}</h1>
+	<div class="description {{ items[pageID + 'Description'].classNames }}">
+		{{ items[pageID + 'Description'].content }}
 	</div>
+	<div class="row">
+		<div class="col-sm-2">
+			<form role="form">
+				<h2>Gender</h2>
+				<div class="checkbox"><label><input type="checkbox" value="boys-pajamas"> Boys</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="girls-pajamas"> Girls</label></div>
+				<h2>Infants</h2>
+				<div class="checkbox"><label><input type="checkbox" value="12-month-olds"> 12 Months</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="18-month-olds"> 18 Months</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="24-month-olds"> 24 Months</label></div>
+				<h2>Toddlers</h2>
+				<div class="checkbox"><label><input type="checkbox" value="2-year-olds"> 2 years</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="3-year-olds"> 3 years</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="4-year-olds"> 4 years</label></div>
+				<h2>Youth</h2>
+				<div class="checkbox"><label><input type="checkbox" value="4-year-olds"> 4 years</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="5-year-olds"> 5 years</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="6-year-olds"> 6 years</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="7-year-olds"> 7 years</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="8-year-olds"> 8 years</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="10-year-olds"> 10 years</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="12-year-olds"> 12 years</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="14-year-olds"> 14 years</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="16-year-olds"> 16 years</label></div>
+				<h2>Types</h2>
+				<div class="checkbox"><label><input type="checkbox" value="pajamas"> Pajamas</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="nightgowns"> Nightgown</label></div>
+				<h2>Collection</h2>
+				<div class="checkbox"><label><input type="checkbox" value="spring-summer"> Spring/Summer</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="fall-winter"> Fall/Winter</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="holiday"> Holiday</label></div>
+				<!--<div class="checkbox"><label><input type="checkbox" value="fall"> Fall</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="winter"> Winter</label></div>
+				<div class="checkbox"><label><input type="checkbox" value="christmas"> Christmas</label></div>-->
+			</form>
+		</div>
+		<div class="col-sm-10">
+			<div class="productColors">
+				{% if products.length %}
+					{% for product in products %} 
+						{% include "./partials/product.html" with product only %}
+					{% endfor %}
+				{% else %}
+					<div class="alert alert-danger" style="margin-top:30px">No Results.</div>
+				{% endif %}
+			</div>
+		</div>
+	</div>
+</div>
 {% endblock %}
 
 {% block foot %}
-	{% include "./partials/quickview.html" %}
-	<script src="/js/quickview.js"></script>
+	<script>var tags = {{ JSON.stringify(tags) }};</script>
+	<script src="/js/pages/catalog.js"></script>
 {% endblock %}
