--- a/views/partials/quickview.html
+++ b/views/partials/quickview.html
@@ -1,64 +1,12 @@
-<div class="modal-dialog" style="display:none">
-  <div class="modal-content clearfix">
-    <div class="modal-header">
-      <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-    </div>
-    <div data-add-to-cart-widget class="modal-body" data-product>
-      <!-- start of content -->
-		<div class="left-column">
-		<div class="big-product-image" data-big-product-image style="background-image:url('{{ images[0] }}')"></div>
-		<div class="product-colors">
-			{% for color in colors %}	
-				<a href="{{ color.productURL }}" data-color data-productnumber="{{ color.productNumber }}"><span class="swatch-color" style="background-image:url('{{ color.images[6] }}')"></span></a>
-			{% endfor %}
-		</div>
-		</div>
-		<div class="right-column">
-		<div class="product-name">
-			<span data-product-name>{{ productName }}</span>
-		</div>
-		<div class="line-break"></div>
-		<div class="product-price">
-			{% if isSale %}
-				<span class="slash">${{ msrp.toFixed(2) }}</span>
-			{% endif %}
-			<span data-product-price>${{ unitPrice.toFixed(2) }}</span>
-		</div>
-		<div class="select-pattern">
-			<select data-colors class="pattern-dropdown">
-			  	<option value="">Select Pattern</option>
-				{% for color in colors %}
-			  		<option value="{{ color.productNumber }}">{{ color.colorName }}</option>
-			  	{% endfor %}
-			</select>  <i class="fa fa-asterisk" data-required  style="display:none"></i>
-		</div>
-		<div class="select-size">
-			<select data-sizes class="size-dropdown">
-			  	<option value="">Select Size</option>
-				{% for size in sizes %}
-					{% if size.inStockNow %}
-						<option value="{{ size.sku }}">{{ size.sizeName }}</option>
-					{% else %}
-						<option value="{{ size.sku }}" disabled>{{ size.sizeName }} (out of stock)</option>
-					{% endif %}
-			  	{% endfor %}
-			</select>  <i class="fa fa-asterisk" data-required style="display:none"></i>
-		</div>
-		<div class="product-next unselectable">
-			<a id="product-decrement" data-decrement><span class="minus-product">-</span></a>
-			<a id="product-equal"><span class="equal-product" data-quantity>1</span></a>
-			<a id="product-increment" data-increment><span class="add-product">+</span></a>
-		</div>
-		<div class="product-add-to-cart">
-			<a href=""><span class="click-add-to-cart" data-add-to-cart>ADD TO CART</span></a>
-		</div>
-		<div class="product-code">
-			<span>Product Code: {{ productUID }}</span>
-		</div>
-		<div class="product-availability"><span>Availability: In Stock</span></div>
-		<div class="second-line-break"></div>
-		<div class="product-description">{{ descriptions[0] }}</div>
-		</div>
-    </div>
-  </div>
+<div class="modal fade quick-view-modal" style="display:none">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+      </div>
+      <div data-add-to-cart-widget class="modal-body clearfix" data-product>
+        <p>One fine body&hellip;</p>
+      </div>
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
 </div>
