--- a/views/layout.html
+++ b/views/layout.html
@@ -23,8 +23,8 @@
 				<li class="signedin"><a href="/account">My Account</a></li>
 				<li class="signedin"><a href="/signout">Sign Out</a></li>
 				<li class="signedout"><a href="/sign-in">Sign In</a></li>
-				<li><a href="http://www.facebook.com/sarasprints" class="facebook"><i class="fa fa-facebook-square"></i></a></li>
-				<li><a href="#" class="pintrest"><i class="fa fa-pinterest"></i></a></li>
+				<li><a href="https://www.facebook.com/pages/Saras-Prints/440631346056025" class="facebook"><i class="fa fa-facebook-square"></i></a></li>
+				<li><a href="http://www.pinterest.com/sarasprints/" class="pintrest"><i class="fa fa-pinterest"></i></a></li>
 			</ul>
 			<div class="banner site-width">
 				<a href="/" class="logo"></a>
