--- a/views/product.html
+++ b/views/product.html
@@ -15,7 +15,7 @@
 		</div>
 	</div>
 	<div class="right-column">
-		<h1 class="{{ items[pageID + 'Title'].classNames }}">{{ title | safe }}</h1>
+		<h1 class="{{ items[pageID + 'Title'].classNames }}" data-product-name>{{ title | safe }}</h1>
 		<div class="description {{ items[pageID + 'Description'].classNames }}">
 			{{ description | safe }}
 		</div>
