--- a/views/layout.html
+++ b/views/layout.html
@@ -57,7 +57,7 @@
 					<div class="col-md-6">
 						<div class="move">
 							<div class="slogan"><span>if you love sara's, you'll adore our other brand...</span></div>	
-							<a href="http://www.americanwidgeon.com" class="awlogo"></a>
+							<a href="/american-widgeon" class="awlogo"></a>
 							<!--<a href="http://www.candybean.com" class="pinklogo"></a>-->
 						</div>
 					</div>
@@ -101,22 +101,22 @@
 	    		</div>
 			</div>
 		</div>
-<div class="modal fade" data-global-dialog style="display:none">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title"></h4>
-      </div>
-      <div class="modal-body">
-        <p></p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
-      </div>
-    </div><!-- /.modal-content -->
-  </div><!-- /.modal-dialog -->
-</div><!-- /.modal -->
+		<div class="modal fade" data-global-dialog style="display:none">
+		  <div class="modal-dialog">
+		    <div class="modal-content">
+		      <div class="modal-header">
+		        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+		        <h4 class="modal-title"></h4>
+		      </div>
+		      <div class="modal-body">
+		        <p class="alert alert-info"></p>
+		      </div>
+		      <div class="modal-footer">
+		        <button type="button" class="btn btn-default" data-dismiss="modal">OK</button>
+		      </div>
+		    </div><!-- /.modal-content -->
+		  </div><!-- /.modal-dialog -->
+		</div><!-- /.modal -->
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="//netdna.bootstrapcdn.com/bootstrap/3.0.2/js/bootstrap.min.js"></script>
 		<script src="/js/plugins/swig.pack.min.js"></script>
