--- a/views/layout.html
+++ b/views/layout.html
@@ -22,6 +22,8 @@
 			<ul class="smallnav site-width">
 				<li class="signedin"><a href="/account">My Account</a></li>
 				<li class="signedin"><a href="/signout">Sign Out</a></li>
+				<li class="signedout"><a href="/create-account">Create Account</a></li>
+				<li class="signedout">|</li>
 				<li class="signedout"><a href="/sign-in">Sign In</a></li>
 				<li><a href="https://www.facebook.com/pages/Saras-Prints/440631346056025" class="facebook"><i class="fa fa-facebook-square"></i></a></li>
 				<li><a href="http://www.pinterest.com/sarasprints/" class="pintrest"><i class="fa fa-pinterest"></i></a></li>
