--- a/views/partials/cart.html
+++ b/views/partials/cart.html
@@ -26,4 +26,4 @@
     </tr>
     </tbody>
 </table>
-<div id="no-items" style="display:none;padding:100px 0">No Items in Cart</div>
+<div id="no-items" style="display:none;padding:100px 0;font-weight:bold">No Items in Cart</div>
