--- a/views/forgot-password.html
+++ b/views/forgot-password.html
@@ -18,7 +18,7 @@
 	  <div class="form-group">
 	    <div class="col-sm-offset-2 col-sm-5">
 			<div class="alert alert-danger" style="display:none"></div>
-			<button type="submit" class="btn btn-default">Reset Password</button>
+			<button type="submit" class="btn btn-success">Reset Password</button>
 	    </div>
 	  </div>
 	</form>
