--- a/views/sign-in.html
+++ b/views/sign-in.html
@@ -29,7 +29,7 @@
 	  <div class="form-group">
 	    <div class="col-sm-offset-2 col-sm-5">
 			<div class="alert alert-danger" style="display:none"></div>
-			<button type="submit" class="btn btn-default">Sign in</button>
+			<button type="submit" class="btn btn-success">Sign in</button>
 	    </div>
 	  </div>
 	</form>
