fixes to account page

--- a/views/layout.html
+++ b/views/layout.html
@@ -20,8 +20,9 @@
     <body>
 		<div class="top full-width">
 			<ul class="smallnav site-width">
-				<li class="signedin"><a href="/account">My Account</a></li>
-				<li class="signedin"><a href="/signout">Sign Out</a></li>
+				<li class="signedin"><a href="/my-account">My Account</a></li>
+				<li class="signedin">|</li>
+				<li class="signedin"><a href="/sign-out">Sign Out</a></li>
 				<li class="signedout"><a href="/create-account">Create Account</a></li>
 				<li class="signedout">|</li>
 				<li class="signedout"><a href="/sign-in">Sign In</a></li>
