--- a/views/partials/account.html
+++ b/views/partials/account.html
@@ -1,8 +1,8 @@
 <h1>Welcome, {{ userInfo.firstName }}</h1>
 <ul class="nav nav-tabs" id="accountTabs">
-    <li class="active"><a href="#promotions">Shop Promotions</a></li>
-    <li><a href="#history">Purchase History</a></li>
-    <li><a href="#password">Change Password</a></li>
+    <li class="active"><a href="#promotions" data-toggle="tab">Shop Promotions</a></li>
+    <li><a href="#history" data-toggle="tab">Purchase History</a></li>
+    <li><a href="#password" data-toggle="tab">Change Password</a></li>
 </ul>
 
 <div class="tab-content">
@@ -66,11 +66,11 @@
                                     <td valign="top">
                                         <b>Tracking Information</b><br />
                                         Shipped: {{ order.shippingMethodCode }}<br />
-                                        Tracking: {{ order.trackingNumber) }}                
+                                        Tracking: {{ order.trackingNumber }}                
                                     </td>
                                     <td valign="top">
                                         <b>Billed To:</b><br />
-                                        zip code {{ order.billToZip) }}
+                                        zip code {{ order.billToZip }}
                                     </td>
                                 </tr>
                             </table>
@@ -82,22 +82,22 @@
         {% endif %}
     </div>
     <div class="tab-pane" id="password">
-        <form action="#" method="post" id="changePasswordForm">
-            <div>
-                <input type="password" required name="oldPassword" placeholder="old password"><br />
-                <input type="password" required name="newPassword" placeholder="new password"><br />
-                <button type="submit" class="btn btn-success">Change Password</button>
-                <div class="inline">
-                    <div class="alert alert-error" style="display:none;">
-                        <button type="button" class="close">×</button>
-                        <span class="message"></span>
-                    </div>
-                    <div class="alert alert-success " style="display:none;">
-                        <button type="button" class="close">×</button>
-                        <span class="message"></span>
-                    </div>
-                </div>
-            </div>
-        </form>
+		<div class="row">
+			<div class="col-sm-6">
+		        <form action="#" role="form" method="post" id="changePasswordForm">
+					<div class="form-group">
+						<label for="oldPassword">Old Password</label>
+						<input type="password" class="form-control" id="oldPassword" placeholder="Enter Old Password">
+					</div>
+					<div class="form-group">
+						<label for="newPassword">New Password</label>
+						<input type="password" class="form-control" id="newPassword" placeholder="Enter New Password">
+					</div>
+		            <div class="alert alert-danger" style="display:none;"></div>
+		            <div class="alert alert-success" style="display:none;"></div>
+		            <button type="submit" class="btn btn-success">Change Password</button>
+		        </form>
+			</div>
+		</div>
     </div>
 </div>
