--- a/views/checkout.html
+++ b/views/checkout.html
@@ -159,7 +159,7 @@
 	                       <span class="card card-vi" data-card-name="Visa"></span>
 	                       <span class="card card-mc" data-card-name="Master Card"></span>
 	                       <span class="card card-ax" data-card-name="American Express"></span>
-	                       <span class="card card-dr" data-card-name="Discover"></span>
+	                       <!--<span class="card card-dr" data-card-name="Discover"></span>-->
 	                   </span>
 	               </label>
 	               <label class="copy-shipping-label">
