--- a/views/product.html
+++ b/views/product.html
@@ -65,7 +65,10 @@
 			Availability: In Stock
 			{% else %}
 			Availability: Out of Stock
-			{% endif %}</span></div>
+			{% endif %}</span>
+		</div>
+		<div class="size-chart-link">
+			<a class="view-size-chart" data-size-chart>View Sizing Chart</a>
 		</div>
 	</div>
 </div>
