--- a/public/css/main.css
+++ b/public/css/main.css
@@ -457,3 +457,20 @@ li span.sp-breadcrumb-label {
 .sale {
 	color : #f00;
 }
+#sizechartPopup {
+	display:none;
+	background-image:url(/img/sizing-chart.gif);
+	background-position:center center;
+	background-repeat:no-repeat;
+    -moz-box-shadow:    3px 3px 5px 0px #ccc;
+    -webkit-box-shadow: 3px 3px 5px 0px #ccc;
+    box-shadow:         3px 3px 5px 0px #ccc;
+	position:fixed;
+	z-index:9999999;
+	width:100%;
+	height:100%;
+	background-color:rgba(0,0,0,0.5);
+	top:0;
+	left:0;
+	cursor:pointer;
+}
