--- a/views/500.html
+++ b/views/500.html
@@ -5,8 +5,10 @@
 {% endblock %}
 
 {% block content %}
-	<h1>Oops, an error occurred.</h1>
-	<p>We are working on the problem.</p>
+	<div style="text-align:center;padding:50px 0">
+		<h1>Oops, an error occurred.</h1>
+		<p>We are working on the problem.</p>
+	</div>
 {% endblock %}
 
 {% block foot %}
